# serializer version: 1
# name: test_lexical_scope_variable_shadowing
  dict({
    <class 'compiler.ast.StatementList'>: dict({
      'stmts': list([
        dict({
          <class 'compiler.ast.VariableDeclaration'>: dict({
            'ident': Token('IDENTIFIER', 'x'),
            'rvalue': dict({
              <class 'compiler.ast.StringLiteral'>: dict({
                'value': 'outside',
              }),
            }),
          }),
        }),
        dict({
          <class 'compiler.ast.IfChain'>: dict({
            'if_stmt': dict({
              <class 'compiler.ast.IfStmt'>: dict({
                'cond': dict({
                  <class 'compiler.ast.BoolLiteral'>: dict({
                    'value': True,
                  }),
                }),
                'true_block': dict({
                  <class 'compiler.ast.StatementBlock'>: dict({
                    'stmts': list([
                      dict({
                        <class 'compiler.ast.VariableDeclaration'>: dict({
                          'ident': Token('IDENTIFIER', 'x'),
                          'rvalue': dict({
                            <class 'compiler.ast.StringLiteral'>: dict({
                              'value': 'inside',
                            }),
                          }),
                        }),
                      }),
                    ]),
                  }),
                }),
              }),
            }),
          }),
        }),
      ]),
    }),
  })
# ---
# name: test_lexical_scope_variable_shadowing.1
  dict({
    <class 'compiler.ast.StatementList'>: dict({
      'fields': dict({
        'stmts': list([
          dict({
            <class 'compiler.ast.VariableDeclaration'>: dict({
              'fields': dict({
                'rvalue': dict({
                  <class 'compiler.ast.StringLiteral'>: dict({
                    'fields': dict({
                    }),
                    'type': <class 'compiler.langtypes.String'>,
                  }),
                }),
              }),
              'type': <class 'compiler.langtypes.String'>,
            }),
          }),
          dict({
            <class 'compiler.ast.IfChain'>: dict({
              'fields': dict({
                'if_stmt': dict({
                  <class 'compiler.ast.IfStmt'>: dict({
                    'fields': dict({
                      'cond': dict({
                        <class 'compiler.ast.BoolLiteral'>: dict({
                          'fields': dict({
                          }),
                          'type': <class 'compiler.langtypes.Bool'>,
                        }),
                      }),
                      'true_block': dict({
                        <class 'compiler.ast.StatementBlock'>: dict({
                          'fields': dict({
                            'stmts': list([
                              dict({
                                <class 'compiler.ast.VariableDeclaration'>: dict({
                                  'fields': dict({
                                    'rvalue': dict({
                                      <class 'compiler.ast.StringLiteral'>: dict({
                                        'fields': dict({
                                        }),
                                        'type': <class 'compiler.langtypes.String'>,
                                      }),
                                    }),
                                  }),
                                  'type': <class 'compiler.langtypes.String'>,
                                }),
                              }),
                            ]),
                          }),
                          'type': <class 'compiler.langtypes.Block'>,
                        }),
                      }),
                    }),
                    'type': <class 'compiler.langtypes.Block'>,
                  }),
                }),
              }),
              'type': <class 'compiler.langtypes.Block'>,
            }),
          }),
        ]),
      }),
      'type': <class 'compiler.langtypes.Block'>,
    }),
  })
# ---
# name: test_lexical_scope_variable_type
  dict({
    <class 'compiler.ast.StatementList'>: dict({
      'stmts': list([
        dict({
          <class 'compiler.ast.VariableDeclaration'>: dict({
            'ident': Token('IDENTIFIER', 'x'),
            'rvalue': dict({
              <class 'compiler.ast.StringLiteral'>: dict({
                'value': 'outside',
              }),
            }),
          }),
        }),
        dict({
          <class 'compiler.ast.IfChain'>: dict({
            'if_stmt': dict({
              <class 'compiler.ast.IfStmt'>: dict({
                'cond': dict({
                  <class 'compiler.ast.BoolLiteral'>: dict({
                    'value': True,
                  }),
                }),
                'true_block': dict({
                  <class 'compiler.ast.StatementBlock'>: dict({
                    'stmts': list([
                      dict({
                        <class 'compiler.ast.VariableDeclaration'>: dict({
                          'ident': Token('IDENTIFIER', 'x'),
                          'rvalue': dict({
                            <class 'compiler.ast.IntLiteral'>: dict({
                              'value': 8,
                            }),
                          }),
                        }),
                      }),
                    ]),
                  }),
                }),
              }),
            }),
          }),
        }),
      ]),
    }),
  })
# ---
# name: test_lexical_scope_variable_type.1
  dict({
    <class 'compiler.ast.StatementList'>: dict({
      'fields': dict({
        'stmts': list([
          dict({
            <class 'compiler.ast.VariableDeclaration'>: dict({
              'fields': dict({
                'rvalue': dict({
                  <class 'compiler.ast.StringLiteral'>: dict({
                    'fields': dict({
                    }),
                    'type': <class 'compiler.langtypes.String'>,
                  }),
                }),
              }),
              'type': <class 'compiler.langtypes.String'>,
            }),
          }),
          dict({
            <class 'compiler.ast.IfChain'>: dict({
              'fields': dict({
                'if_stmt': dict({
                  <class 'compiler.ast.IfStmt'>: dict({
                    'fields': dict({
                      'cond': dict({
                        <class 'compiler.ast.BoolLiteral'>: dict({
                          'fields': dict({
                          }),
                          'type': <class 'compiler.langtypes.Bool'>,
                        }),
                      }),
                      'true_block': dict({
                        <class 'compiler.ast.StatementBlock'>: dict({
                          'fields': dict({
                            'stmts': list([
                              dict({
                                <class 'compiler.ast.VariableDeclaration'>: dict({
                                  'fields': dict({
                                    'rvalue': dict({
                                      <class 'compiler.ast.IntLiteral'>: dict({
                                        'fields': dict({
                                        }),
                                        'type': <class 'compiler.langtypes.Int'>,
                                      }),
                                    }),
                                  }),
                                  'type': <class 'compiler.langtypes.Int'>,
                                }),
                              }),
                            ]),
                          }),
                          'type': <class 'compiler.langtypes.Block'>,
                        }),
                      }),
                    }),
                    'type': <class 'compiler.langtypes.Block'>,
                  }),
                }),
              }),
              'type': <class 'compiler.langtypes.Block'>,
            }),
          }),
        ]),
      }),
      'type': <class 'compiler.langtypes.Block'>,
    }),
  })
# ---
